# chat-rs

./: Cargo.toml
src/: main.rs
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.svelte  Chatroom.svelte  Registration.svelte  config.ts
